HPMSampleCode/src/objects/HPM_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>HPM_App_Url__c</fullName>
        <label>App Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HPM_Page_Id__c</fullName>
        <description>This field store the host payment page id in zuora</description>
        <label>Page Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HPM_Security_Token__c</fullName>
        <description>This field is for storing Zuora HPM API Security Key</description>
        <label>API Security Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HPM_Tenant_Id__c</fullName>
        <description>This field store the Zuora tenant Id</description>
        <label>Tenant ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HPM Setting</label>
</CustomObject>